--- a/pages/book/book.wxss
+++ b/pages/book/book.wxss
@@ -69,9 +69,29 @@ image {
 }
 
 .book_form .single .single_text {
+  height: 50rpx;
   font-size: 36rpx;
   line-height: 50rpx;
   color: #3c3c3c;
+}
+
+.book_form .single .single_left{
+  flex: 1;
+  height: 50rpx;
+  font-size: 36rpx;
+  line-height: 50rpx;
+  color: #23C2F7;
+}
+
+.book_form .single .single_left picker{
+  width: 100%;
+  height: 100%;
+}
+
+.book_form .single .single_left picker view{
+  width: 100%;
+  height: 50rpx;
+  text-align: right;
 }
 
 .book_form .service_charge{
