--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -1,14 +1,15 @@
 <!-- message.wxml -->
+<wxs module="dateFr" src='../../utils/filter.wxs'></wxs>
 <view class='container'>
   <view class='un_empty' wx:if='{{msgs.length}}'>
     <block wx:for='{{msgs}}' wx:key='{{index}}'>
-      <view class='list'>
-        <view class='title'>酒店确认2</view>
-        <view class='subTitle'>你的酒店已预订成功2</view>
-        <view class='introduce'>在显示酒店预订的详细信息在显示酒店预订的详细信息在显示酒店预订的详细信息在显示信息在显示酒店预订的详细信息在显示信息在显示酒店预订的详细信息在显示信息在显示酒店预订的详细信息在显示</view>
+      <view class='list' data-id='{{item.target}}' data-title='{{item.title}}' bindtap='goToTheDetail'>
+        <view class='title'>{{item.title}}</view>
+        <view class='subTitle' wx:if="{{false}}">你的酒店已预订成功2</view>
+        <view class='introduce'>{{item.content}}</view>
         <view class='bottom'>
-          <view class='date'>2020年10月1日</view>
-          <view class='detail'>查看详情2></view>
+          <view class='date'>{{dateFr.getOrderDate(item.createAt)}}</view>
+          <view class='detail'>查看详情></view>
         </view>
       </view>
     </block>
