--- a/pages/myOrder/myOrder.wxss
+++ b/pages/myOrder/myOrder.wxss
@@ -1,14 +1,23 @@
+/*隐藏滚动条*/
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+}
+
 .container{
-  padding: 0 40rpx;
+  padding: 0 40rpx 40rpx;
 }
 
 .tabs{
   display: flex;
   align-items: center;
+  overflow-x: auto;
 }
 
 .tabs view{
   position: relative;
+  min-width: 112rpx;
   font-size: 28rpx;
   line-height: 40rpx;
   color: #8C8C8C;
@@ -93,6 +102,14 @@
   color: #3C3C3C;
 }
 
+.order .top .status.orange{
+  color: #F97572;
+}
+
+.order .top .status.blue{
+  color: #23C2F7;
+}
+
 .order .line{
   width: 100%;
   height: 2rpx;
@@ -101,13 +118,23 @@
 }
 
 .order .center{
+  margin-bottom: 40rpx;
+}
+
+.order .center .name{
   font-size: 32rpx;
   line-height: 45rpx;
   color: #3C3C3C;
   overflow:hidden;
   white-space:nowrap;
   text-overflow:ellipsis;
-  margin-bottom: 40rpx;
+  margin-bottom: 10rpx;
+}
+
+.order .center .subTitle{
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #B7B7B7;
 }
 
 .order .bottom{
@@ -134,4 +161,10 @@
   border-radius: 31rpx;
   border:1rpx solid rgba(183,183,183,1);
   background-color: #fff;
+}
+
+.order .bottom .left text{
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #B7B7B7;
 }
